Mudanças no design da Home Screen

--- a/app/src/main/res/layout/recycler_pedidos_item.xml
+++ b/app/src/main/res/layout/recycler_pedidos_item.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="8dp"
-        app:cardBackgroundColor="#ffffc3"
+        app:cardBackgroundColor="#99ffffc3"
         app:cardCornerRadius="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
