--- a/app/src/main/res/drawable/text_background.xml
+++ b/app/src/main/res/drawable/text_background.xml
@@ -16,13 +16,13 @@
 
         <path
             android:pathData="M0 0V46H257V0"
-            android:fillColor="#D9D9D9"
+            android:fillColor="@color/rosa_light"
             />
 
         <path
             android:pathData="M10 0H247C252.523 0 257 4.47715 257 10V36C257 41.5228 252.523 46 247 46H10C4.47715 46 0 41.5228 0 36V10C0 4.47715 4.47715 0 10 0Z"
             android:strokeWidth="2"
-            android:strokeColor="#000000"
+            android:strokeColor="#00000000"
             />
 
     </group>
