--- a/app/src/main/res/drawable/text_cadastro_background.xml
+++ b/app/src/main/res/drawable/text_cadastro_background.xml
@@ -3,16 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="257dp"
-    android:height="30dp"
+    android:height="40dp"
     android:viewportWidth="257"
-    android:viewportHeight="30"
+    android:viewportHeight="40"
     >
 
     <group>
 
         <path
             android:pathData="M0 0V46H257V0"
-            android:fillColor="#D9D9D9"
+            android:fillColor="@color/rosa_light"
             />
 
     </group>
