--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -74,7 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginEnd="36dp"
-        android:backgroundTint="#E89D9D"
+        android:backgroundTint="@color/verde"
         android:padding="12dp"
         android:text="Entrar"
         android:textColor="@color/black"
@@ -101,7 +101,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="72dp"
         android:layout_marginEnd="72dp"
-        android:backgroundTint="#9DE8B2"
+        android:backgroundTint="@color/azul"
         android:padding="10dp"
         android:text="Cadastrar"
         android:textColor="@color/black"
