--- a/app/src/main/res/layout/recycler_clientes_item.xml
+++ b/app/src/main/res/layout/recycler_clientes_item.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="8dp"
-        app:cardBackgroundColor="#00ffffff"
+        app:cardBackgroundColor="@color/rosa_light"
         app:cardElevation="0dp"
         app:cardCornerRadius="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
